k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cross-encoder-ingress
  namespace: cross-encoder
  annotations:
    # Set to false for testing with IP, default will redirect HTTP to HTTPS
    # this false is needed as we don't have a TLS cert for the direct IP access
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Enable CORS to support cross-origin requests
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    # catch the first group
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # This must match the ingress controller class name of the cluster
  ingressClassName: nginx  
  rules:
  - http:  # No host specified to allow access via IP
      paths:
      - path: /cross-encoder/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            # This must match the service name defined in service.yaml
            name: cross-encoder-service
            port:
              # Make sure this matches the service port
              number: 8000
